# TradinBot-Binance

./: .gitignore
trading-bot-binance/: .env  README.md  main.py  pyproject.toml
trading-bot-binance/bot/: bot.py  cli.py  logger.py  pyproject.toml  validation.py
trading-bot-binance/tests/: test_trading_bot.py
